# mo-mst

./: CITATION.cff  README.md  resultsEvaluation.ipynb
code/: CMakeLists.txt  m_mst.cpp
code/datastructures/includes/: BinaryHeap.h  GraphCompacter.h  Label.h  MemoryPool.h  graph.h  typedefs.h
code/datastructures/src/: GraphCompacter.cpp  graph.cpp
code/exampleInstances/: 3_a_9_90_2.tree  4_a_6_30_3.tree  minimalExample.tree
code/preprocessing/includes/: Dfs.h  Preprocessor.h
code/preprocessing/src/: Dfs.cpp  Preprocessor.cpp
code/search/includes/: BN.h  ImplicitNode.h  ImplicitNodeBN.h  MultiPrim.h  Permanents.h  Solution.h
code/search/src/: BN.cpp  ImplicitNode.cpp  MultiPrim.cpp  Solution.cpp
results/: 4d_anticorr_complete.inst  4d_anticorr_grid.inst  4d_corr_complete.inst  4d_corr_grid.inst  Untitled.ipynb  complete_anticorr_3d.inst  complete_corr_3d.inst  evaluataIslamifelipe.py  evaluateSantos.py  grid_anticorr_3d.inst  multiBN_SANTOS_3d.csv  multiBN_SANTOS_4d.csv  multiBN_complete_2d_small.csv  multiBN_complete_anticorr_3d.csv  multiBN_complete_anticorr_4d.csv  multiBN_complete_corr_3d.csv  multiBN_complete_corr_4d.csv  multiBN_grid_anticorr_3d.csv  multiBN_grid_anticorr_4d.csv  multiBN_grid_corr_3d.csv  multiBN_grid_corr_4d.csv  multiPrim_SANTOS_3d.csv  multiPrim_SANTOS_4d.csv  multiPrim_complete_2d_small.csv  multiPrim_complete_anticorr_3d.csv  multiPrim_complete_anticorr_4d.csv  multiPrim_complete_corr_3d.csv  multiPrim_complete_corr_4d.csv  multiPrim_grid_anticorr_3d.csv  multiPrim_grid_anticorr_4d.csv  multiPrim_grid_corr_3d.csv  santos_3d.csv  (+3 more)
